# stan

./: .gitignore  README.md  main.py  pyproject.toml
argendata_stan/: __init__.py
argendata_stan/common/: __init__.py  analyzer.py  config_flags.py  flags.py  types.py
argendata_stan/dynamic_analyzer/: __init__.py  dynamic_analyzer.py
argendata_stan/dynamic_analyzer/datasets/: __init__.py  datasets.py
argendata_stan/script/: __init__.py  common.py  python.py  r.py
argendata_stan/static_analyzer/: __init__.py  static_analyzer.py
argendata_stan/static_analyzer/common/: __init__.py  config_flags.py  types.py
argendata_stan/static_analyzer/datasets/: datasets.py
argendata_stan/static_analyzer/dependencies/: __init__.py  dependencies.py  github.py  parse_imports.py
argendata_stan/utils/: __init__.py  abstract_field.py
src/argendata_stan/: __init__.py  import_analyzer.py  runner.py  script.py  workspace.py
stan/static_analyzer/: static_analyzer.py
test/: rootdir.py  test_all.py  test_script.py  test_static_analyzer.py  utils.py
test/files/: dotenv_script.py  expected_script.py  no_dep_script.py  sample.env  sample_script.py
