[project]
name = "argendata_stan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argendata-datasets",
    "ev",
    "pydantic>=2.12.5",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "rich>=14.2.0",
]

[tool.uv.sources]
ev = { git = "https://github.com/datos-fundar/ev" }
argendata-datasets = { git = "https://github.com/argendatafundar/datasets.git" }
# argendata-datasets = { path = "../datasets", editable = true }
